--- a/app/src/main/res/drawable/btn_disconnect.xml
+++ b/app/src/main/res/drawable/btn_disconnect.xml
@@ -5,10 +5,10 @@
             android:shape="rectangle">
             <size android:height="70dp" android:width="70dp"/>
             <corners android:radius="40dp"/>
-            <solid android:color="#503498db"/>
+            <solid android:color="#FFF"/>
 
         </shape>
     </item>
-    <item android:drawable="@drawable/ic_baseline_videocam_off_24"/>
+    <item android:drawable="@drawable/ic_baseline_call_end_24"/>
 
 </layer-list>
