--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -21,8 +21,8 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/download"
- />
+        android:src="@drawable/grpvid"
+    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
