--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -58,13 +58,17 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="Enter Room Name"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:textColor="#000"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomView"
-        android:inputType="textCapSentences|textAutoCorrect"
+        android:inputType="textCapSentences"
+        android:maxLength="15"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM"
         />
 
     <Button
